[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Scripts/TestRect.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 20, 20 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 110 )

[node name="Game" type="Node" index="0"]

script = ExtResource( 1 )

[node name="TestRect" type="KinematicBody2D" parent="." index="0"]

position = Vector2( 500, 290 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 2 )
_sections_unfolded = [ "Collision", "Material", "Pause", "Pickable", "Transform", "Visibility", "Z Index", "collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="TestRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 20, 20 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.917969, 0.904746, 0.0717163, 1 )
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Pause", "Rect", "Size Flags", "Theme", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestRect" index="1"]

shape = SubResource( 1 )

[node name="CollisionTimer" type="Timer" parent="TestRect" index="2"]

process_mode = 0
wait_time = 0.75
one_shot = true
autostart = false

[node name="RightWall" type="StaticBody2D" parent="." index="1"]

position = Vector2( 720, 280 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 0.0
bounce = 1.0
_sections_unfolded = [ "Collision", "Material", "Pause", "Pickable", "Transform", "Visibility", "Z Index" ]
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="RightWall" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -10.0
margin_top = -110.0
margin_right = 10.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 10, 110 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.790323, 0.320496, 0.921875, 1 )
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Pause", "Rect", "Size Flags", "Theme", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall" index="1"]

shape = SubResource( 2 )

[node name="LeftWall" type="StaticBody2D" parent="." index="2"]

position = Vector2( 270, 280 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision", "Material", "Pause", "Pickable", "Transform", "Visibility", "Z Index" ]
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="LeftWall" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -10.0
margin_top = -110.0
margin_right = 10.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 10, 110 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.790323, 0.320496, 0.921875, 1 )
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Pause", "Rect", "Size Flags", "Theme", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall" index="1"]

shape = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="." index="3"]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="CheckBox" type="CheckBox" parent="CanvasLayer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 450.0
margin_top = 420.0
margin_right = 562.0
margin_bottom = 444.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Collision Info"
flat = false
align = 0

[connection signal="collisioninfo_change" from="TestRect" to="." method="_on_TestRect_collisioninfo_change"]

[connection signal="timeout" from="TestRect/CollisionTimer" to="TestRect" method="_on_CollisionTimer_timeout"]


